# lab_challenge_23fall

./: .gitignore  config.py  pyproject.toml  readme.org  shell.nix
src/data/: __init__.py  data.py  input.py
src/models/: __init__.py  layers.py  models.py
src/train/: train.py
src/utils/: utils.py
